# bujo-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: bujo.md
.kilocode/commands/: bujo.md
bujo/: __init__.py  ai.py  ai_capture.py  analytics.py  app.py  app.tcss  capture.py  capture_hotkey.py  cli.py  hints.py  integrations.py  models.py  perspectives.py  rate_limit.py  review.py  symbols.py  time.py  undo.py  vault.py
bujo/views/: __init__.py  daily.py  future.py  help.py  migration.py  monthly.py  review.py  search.py  tutorial.py
bujo/widgets/: __init__.py  date_ribbon.py  entry_list.py  input_bar.py
docs/superpowers/plans/: 2026-03-17-bujo-ai-notepad-redesign.md
docs/superpowers/specs/: 2026-03-17-bujo-ai-notepad-redesign-design.md
tests/: conftest.py  test_ai.py  test_ai_capture.py  test_analytics.py  test_capture.py  test_cli.py  test_future.py  test_hints.py  test_integrations.py  test_models.py  test_search.py  test_symbols.py  test_time.py  test_undo.py  test_vault.py  test_widgets.py
